# tema

./: .gitignore  CMakeLists.txt  README  README-SRC  \  compile_flags.txt
include/tema/: emit.hpp  format.hpp  split.hpp  util.hpp
src/: emit.cpp  format.cpp  main.cpp  split.cpp
tests/: CMakeLists.txt
